<resources>
    <string name="app_name">BackFlowTester</string>
    <string name="motd">This is the message of the day.</string>
    <string name="new_document">New Document</string>
    <string name="email_document">Email Document</string>
    <string name="title_activity_backflow_form">Pre-Test Information</string>
    <string name="title_activity_backflow_form_page2">Testing Results</string>
    <string name="placeholder">PLACEHOLDER TEXT</string>
    <string name="purveyor">1. Water Purveyor:</string>
    <string name="acct_no">2. Account No.:</string>
    <string name="permit_no">3. Permit No.:</string>
    <string name="service_name">4. Service Name:</string>
    <string name="service_physical_address">5. Service Address:</string>
    <string name="service_contact">6. Contact Name:</string>
    <string name="service_email">7. Contact Email:</string>
    <string name="service_phone">8. Contact Phone:</string>
    <string name="primary_service_provided">9. Primary business or service at this location:</string>
    <string name="owner_or_contractor">10. Owner/Mgmt Co/Contractor:</string>
    <string name="postal_address">11. Mailing Address:</string>
    <string name="owner_or_contractor_name">12. Contact Name:</string>
    <string name="owner_or_contractor_email">13. Contact Email:</string>
    <string name="owner_or_contractor_phone">14. Contact Phone:</string>
    <string name="new_or_existing">15. Is the device New or Existing?</string>
    <string name="is_new">New</string>
    <string name="is_existing">Existing</string>
    <string name="new_serial_no.">If new, provide removed assembly serial number:</string>
    <string name="purpose_question">16. Purpose:</string>
    <string name="purpose_contain">Secondary/Containment</string>
    <string name="purpose_primary">Primary/Point of Use(Isolation)</string>
    <string name="use_question">17. Use: </string>
    <string name="use_domestic">Domestic</string>
    <string name="use_fire_suppression">Fire Suppression</string>
    <string name="use_irrigation">Irrigation</string>
    <string name="use_process">Process</string>
    <string name="assembly_type">18. Assembly Type:</string>
    <string name="reduced_pressure">Reduced Pressure</string>
    <string name="double_check">Double Check</string>
    <string name="pvb">Pressure Vacuum Breaker</string>
    <string name="manufacturer">19. Manufacturer:</string>
    <string name="model_no.">20. Model No.:</string>
    <string name="size">21. Size: </string>
    <string name="serial_no.">22. Serial No.:</string>
    <string name="date_installed">23. Date Installed:</string>
    <string name="last_inspection">24. Last Inspection:</string>
    <string name="line_pressure">25. Line Pressure:</string>
    <string name="location">26. Location:</string>
    <string name="pressure_reducing_valve">27. Pressure Reducing Valve?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="initial_test">28. Initial Test:</string>
    <string name="repairs">29. Repairs:</string>
    <string name="check_valve_1">Check Valve #1</string>
    <string name="check_valve_2">Check Valve #2</string>
    <string name="psid">PSID</string>
    <string name="dprv">Differential Pressure Relief Valve</string>
    <string name="opened_at">Opened at:</string>
    <string name="did_it_open">Did it open?</string>
    <string name="air_inlet">Air Inlet Opened at</string>
    <string name="closed_tight">Closed Tight?</string>
    <string name="leaked">Leaked?</string>
    <string name="cleaned">Cleaned?</string>
    <string name="replaced">Replaced?</string>
    <string name="repaired">Repaired?</string>
    <string name="repair_comments">Repairs (include part description / Comments:</string>
    <string name="seat_disc">Seat/Disc?</string>
    <string name="spring">Spring?</string>
    <string name="guide">Guide?</string>
    <string name="other">Other?</string>
    <string name="diaphragm">Diaphragm</string>
    <string name="seat">Seat</string>
    <string name="floating">Float?</string>
    <string name="shut_off_valve1">Shut off valve #1</string>
    <string name="shut_off_valve2">Shut off valve #2</string>
    <string name="assembly_test">Assembly Mechanical Test:</string>
    <string name="assembly_test_1">If mechanical test fails, the Water Purveyor/Authority must be notified immediately and repairs made as soon as possible.</string>
    <string name="assembly_installation">Assembly Installation: (Visual inspection during testing):</string>
    <string name="assembly_installation_2">Reason fur failure:</string>
    <string name="fire_dept_not">Alarm Company / Fire Department notification:</string>
    <string name="turn_off_date">Turn off date:</string>
    <string name="turn_off_time">Turn off time:</string>
    <string name="turn_on_date">Turn on date:</string>
    <string name="turn_on_time">Turn on time:</string>
    <string name="asse_accordance">Technician certifies this assembly has been tested in accordance with ASSE procedures:</string>
    <string name="tester_name">Tester Name:</string>
    <string name="cert_no.">Certification No.</string>
    <string name="expires">Expires:</string>
    <string name="tester_sig">Tester Signature:</string>
    <string name="test_date">Test Date: </string>
    <string name="tester_phone">Tester Phone #:</string>
    <string name="test_gauge">Test Gauge: </string>
    <string name="gauge_date">Gauge Re-Cert Date: </string>
    <string name="owner_signature">Owner or Agent Signature: </string>
    <string name="signature_fine_print">Signature indicates verification by Signer that isolation valves were returned to pre-test orientation.</string>
    <string name="next_page">Next Page</string>



</resources>
